--- a/ShouldIGo32Or64Bit.lpi
+++ b/ShouldIGo32Or64Bit.lpi
@@ -11,7 +11,8 @@
       <Icon Value="0"/>
     </General>
     <i18n>
-      <EnableI18N LFM="False"/>
+      <EnableI18N Value="True"/>
+      <OutDir Value="locale"/>
     </i18n>
     <VersionInfo>
       <StringTable ProductVersion=""/>
